--- a/index.html
+++ b/index.html
@@ -32,29 +32,28 @@
       <div class="calc--screen"></div>
 
       <div class="calc--body">
-        <button data-btn>7</button>
-        <button data-btn>8</button>
-        <button data-btn>9</button>
+        <button data-btn="7">7</button>
+        <button data-btn="8">8</button>
+        <button data-btn="9">9</button>
         <button data-delete>del</button>
-        <button data-btn>4</button>
-        <button data-btn>5</button>
-        <button data-btn>6</button>
+        <button data-btn="4">4</button>
+        <button data-btn="5">5</button>
+        <button data-btn="6">6</button>
         <button data-btn class="operator">+</button>
-        <button data-btn>1</button>
-        <button data-btn>2</button>
-        <button data-btn>3</button>
-        <button data-btn class="operator">-</button>
-        <button data-btn>.</button>
-        <button data-btn>0</button>
-        <button data-btn class="operator">/</button>
-        <button data-btn class="operator">*</button>
+        <button data-btn="1">1</button>
+        <button data-btn="2">2</button>
+        <button data-btn="3">3</button>
+        <button data-btn="-" class="operator">-</button>
+        <button data-btn=".">.</button>
+        <button data-btn="0">0</button>
+        <button data-btn="/" class="operator">/</button>
+        <button data-btn="*" class="operator">*</button>
         <button data-reset>reset</button>
-        <button data-equals>=</button>
+        <button data-equals="=">=</button>
       </div>
     </main>
 
     <footer class="attribution"></footer>
-
     <script src="./script.js"></script>
     <script src="switch.js"></script>
   </body>
