--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <button data-btn="4">4</button>
         <button data-btn="5">5</button>
         <button data-btn="6">6</button>
-        <button data-btn class="operator">+</button>
+        <button data-btn="+" class="operator">+</button>
         <button data-btn="1">1</button>
         <button data-btn="2">2</button>
         <button data-btn="3">3</button>
