adding decimal validation

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <button data-btn="2">2</button>
         <button data-btn="3">3</button>
         <button data-btn="-" class="operator">-</button>
-        <button data-btn=".">.</button>
+        <button class="btn decimal" data-btn=".">.</button>
         <button data-btn="0">0</button>
         <button data-btn="/" class="operator">/</button>
         <button data-btn="*" class="operator">*</button>
