--- a/index.html
+++ b/index.html
@@ -8,27 +8,25 @@
     <title>Calculator app</title>
   </head>
   <body>
-    <main class="container">
-      <div class="calc--header">
-        <h2>calc</h2>
-        <div class="calc--switch">
-          <p>theme</p>
-          <div class="calc--switch-bg">
-            <div class="switch--btn">
-              <span>1</span>
-              <span>2</span>
-              <span>3</span>
-            </div>
+    <header class="calc--header">
+      <div class="calc--switch">
+        <p>theme</p>
+        <div class="calc--switch-bg">
+          <div class="switch--btn">
+            <span>1</span>
+            <span>2</span>
+            <span>3</span>
+          </div>
 
-            <div class="switch--circle">
-              <button id="one"></button>
-              <button id="two"></button>
-              <button id="three"></button>
-            </div>
+          <div class="switch--circle">
+            <button id="one"></button>
+            <button id="two"></button>
+            <button id="three"></button>
           </div>
         </div>
       </div>
-
+    </header>
+    <main class="container">
       <div class="calc--screen"></div>
 
       <div class="calc--body">
@@ -39,15 +37,15 @@
         <button data-btn="4">4</button>
         <button data-btn="5">5</button>
         <button data-btn="6">6</button>
-        <button data-btn="+" class="operator">+</button>
+        <button data-operator="+" class="operator">+</button>
         <button data-btn="1">1</button>
         <button data-btn="2">2</button>
         <button data-btn="3">3</button>
-        <button data-btn="-" class="operator">-</button>
+        <button data-operator="-" class="operator">-</button>
         <button class="btn decimal" data-btn=".">.</button>
         <button data-btn="0">0</button>
-        <button data-btn="/" class="operator">/</button>
-        <button data-btn="*" class="operator">*</button>
+        <button data-operator="/" class="operator">/</button>
+        <button data-operator="*" class="operator">*</button>
         <button data-reset>reset</button>
         <button data-equals="=">=</button>
       </div>
@@ -55,6 +53,5 @@
 
     <footer class="attribution"></footer>
     <script src="./script.js"></script>
-    <script src="switch.js"></script>
   </body>
 </html>
