--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="calc--header">
-      <div class="calc--switch">
+      <section class="calc--switch">
         <p>theme</p>
         <div class="calc--switch-bg">
           <div class="switch--btn">
@@ -24,12 +24,12 @@
             <button id="three"></button>
           </div>
         </div>
-      </div>
+      </section>
     </header>
     <main class="container">
       <div class="calc--screen"></div>
 
-      <div class="calc--body">
+      <section class="calc--body">
         <button data-btn="7">7</button>
         <button data-btn="8">8</button>
         <button data-btn="9">9</button>
@@ -48,7 +48,7 @@
         <button data-operator="*" class="operator">*</button>
         <button data-reset>reset</button>
         <button data-equals="=">=</button>
-      </div>
+      </section>
     </main>
 
     <footer class="attribution"></footer>
